<resources>
    <string name="app_name">Mi</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="password_login">密码登录</string>
    <string name="quick_login">快捷登录</string>
    <string name="telephone">手机号码</string>
    <string name="password">登录密码</string>
    <string name="forget_password">忘记密码?</string>

    <string name="input_telephone">输入手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="send_identifying_code">发送验证码</string>
    <string name="identifying_code">验证码</string>
    <string name="promo_code">推广码</string>
    <string name="register_tips">注册即表示同意《圈秘用户协议》</string>

    <string name="personal_information">完善个人信息</string>
    <string name="nickname">填写昵称</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="personal_tips">注册成功后，性别不可修改</string>
    <string name="next_step">下一步</string>

    <string name="interest">选择你感兴趣的内容</string>
    <string name="enter_the_circle">进入圈秘</string>

    <string name="home">首页</string>
    <string name="circle">圈子</string>
    <string name="chat">聊天</string>
    <string name="my">我的</string>

    <string name="my_autograph">留下一句话让人记住你的话吧~</string>
    <string name="edit">编辑</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="homepage">主页</string>
    <string name="album">相册</string>
    <string name="favorite_circle">设计喜爱的圈子</string>
    <string name="my_publish">我的发布</string>
    <string name="historical_visit">历史访问</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="personal_settings">个人设置</string>
</resources>
