<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <EditText
            android:id="@+id/et_register_phone"
            style="@style/register_et_style"
            android:hint="@string/input_telephone"
            android:inputType="phone" />

        <View style="@style/line_et_style" />

        <EditText
            android:id="@+id/et_register_password"
            style="@style/register_et_style"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <View style="@style/line_et_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <EditText
                android:id="@+id/et_register_identify_code"
                style="@style/register_et_style"
                android:layout_toLeftOf="@+id/tv_register_send_identify_code"
                android:hint="@string/identifying_code" />

            <TextView
                android:id="@+id/tv_register_send_identify_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="6dp"
                android:background="@drawable/register_send_identify_code_selector"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/send_identifying_code"
                android:textColor="@color/grey_bfbfbf"
                android:textSize="13sp" />
        </RelativeLayout>

        <View style="@style/line_et_style" />

        <EditText
            android:id="@+id/et_register_promo_code"
            style="@style/register_et_style"
            android:hint="@string/promo_code" />

        <View style="@style/line_et_style" />

        <Button
            android:id="@+id/btn_register"
            style="@style/btn_common_style"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/common_grey_btn_selector"
            android:text="@string/register" />

        <TextView
            android:id="@+id/tv_register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/register_tips"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
