<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black_1f1f1f"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_main_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_page_menu_home_radio_selector"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@drawable/home_page_menu_txt_color_selector"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtn_main_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_page_menu_home_circle_selector"
            android:gravity="center"
            android:text="@string/circle"
            android:textColor="@drawable/home_page_menu_txt_color_selector"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtn_main_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_page_menu_home_chat_selector"
            android:gravity="center"
            android:text="@string/chat"
            android:textColor="@drawable/home_page_menu_txt_color_selector"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtn_main_my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_page_menu_home_my_selector"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@drawable/home_page_menu_txt_color_selector"
            android:textSize="12sp" />
    </RadioGroup>
</LinearLayout>
